--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -13,7 +13,7 @@
 				<div class="Container50 Responsive100 Fleft">
 					<p:panel id="fineTunePanel" styleClass="fineTuneBlock" style="display:none;">
 						<div class="Container100 FTLabel">
-							<span class="Fs16">Fine Tune Strategy</span>
+							<span class="Fs16">Change Strategy</span>
 							<div class="Wid10 Fright closeFTbtn">
 								<p:commandButton type="button" styleClass="fineTuneBtn"
 									icon="fa fa-times">
