--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
@@ -20,6 +20,7 @@
                     5. What best describes your investment approach?
                 </h5>
                 <p:selectOneRadio value="#{uobpb.riskCalculator.ans7}"
+                                  styleClass="riskQ"
                                   layout="pageDirection">
                     <p:ajax listener="#{uobpb.onChangeValue}"
                             update=":ceForm:graphArea"/>
