--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -19,7 +19,7 @@
             <h5>
                 7. To what extent are you concerned about preservation of your capital?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans9}"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans9}" styleClass="riskQ"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
