--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
@@ -19,6 +19,7 @@
             1. What is your employment situation?
         </h5>
         <p:selectOneRadio value="#{uobpb.riskCalculator.ans3}"
+                          styleClass=""
                           layout="pageDirection">
           <p:ajax listener="#{uobpb.onChangeValue}"
                     update=":ceForm:graphArea"/>
