Checked in files - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
@@ -174,7 +174,7 @@
                     <p:menuitem value="Variance" itemValue="O"/>
                     <p:menuitem value="New" itemValue="N"/>
                 </p:menuButton>-->
-                <p:selectCheckboxMenu label="Options"
+                <p:selectCheckboxMenu label="Filter"
                                       filter="false" styleClass="multiSelectionDropdown" panelStyle="width:250px">
                     <f:selectItems value="View" />
                     <f:selectItems value="Date" />
