--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -7,28 +7,61 @@
 
     <p:panel style="border: 0px">
 
-    <div class="Container100 Responsive50">
-        <div class="ContainerIndent">
-            <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
-                     style="margin-bottom:7px;border: 0px; background: transparent"
-                     styleClass="Container100">
-                <h:outputText styleClass="errorText"
-                              value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
-                <div class="EmptyBox5"></div>
-            </p:panel>
-            <h5>
-                7. To what extent are you concerned about preservation of your capital?
-            </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans9}" styleClass="riskQ"
-                              layout="pageDirection">
-               <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="A high degree of risk would be acceptable given longer term capital growth objectives." itemValue="1" />
+        <div class="Container100 Responsive50 CenterRisk7Only">
+            <div class="ContainerIndent">
+                <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
+                         style="margin-bottom:7px;border: 0px; background: transparent"
+                         styleClass="Container100">
+                    <h:outputText styleClass="errorText"
+                                  value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
+
+                    <div class="EmptyBox5"></div>
+                </p:panel>
+                <h5 style="text-align: left;">
+                    7. To what extent are you concerned about preservation of your capital?
+                </h5>
+
+                <div class="riskGraphBarBlock">
+                    <div class="marginCenteronly1">
+                        <div class="brTopLabel">12%</div>
+                        <div class="bar1">
+                            <div class="innerval1" style="margin: 5px 0px 0px 18px;!important">3.5%<div><i class="fa fa-circle"></i></div></div>
+                            <i class="fa fa-check-circle barcheckedicon1"></i>
+
+                            <div class="innerBarUp1"></div>
+                            <div class="innerBarDown1"></div>
+                        </div>
+                        <div class="brBottomLabel">-5%</div>
+                    </div>
+                    <div class="marginCenteronly2">
+                        <div class="brTopLabel">24%</div>
+                        <div class="bar2 selectedRiskBar">
+                            <div class="innerval1">6%<div><i class="fa fa-circle"></i></div></div>
+                            <i class="fa fa-check-circle barcheckedicon2"></i>
+
+                            <div class="innerBarUp2"></div>
+                            <div class="innerBarDown2"></div>
+                        </div>
+                        <div class="brBottomLabel">-12%</div>
+                    </div>
+                    <div class="marginCenteronly3">
+                        <div class="brTopLabel">36%</div>
+                        <div class="bar3">
+                            <div class="innerval1">8%<div><i class="fa fa-circle"></i></div></div>
+                            <i class="fa fa-check-circle barcheckedicon3"></i>
+
+                            <div class="innerBarUp3"></div>
+                            <div class="innerBarDown3"></div>
+                        </div>
+                        <div class="brBottomLabel">-20%</div>
+                    </div>
+                </div>
+                <!--<f:selectItem itemLabel="A high degree of risk would be acceptable given longer term capital growth objectives." itemValue="1" />
                 <f:selectItem itemLabel="A moderate degree of risk would be acceptable given the potential for increased returns." itemValue="2" />
-                <f:selectItem itemLabel="A minimal degree of risk would be acceptable for a slight increase in potential returns." itemValue="3" />
-            </p:selectOneRadio>
+                <f:selectItem itemLabel="A minimal degree of risk would be acceptable for a slight increase in potential returns." itemValue="3" />-->
+
+            </div>
         </div>
-    </div>
 
     </p:panel>
 
