--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -568,6 +568,7 @@
                     </p:panel>
                     <div class="Container80 Fnone CustomWidthFA2">
                         <p:selectBooleanCheckbox
+                                id="actfundingoptout"
                                 styleClass="RegulatoryCheckBox"
                                 value="#{tdcto.tdMasterData.fundNow}"
                                 itemLabel="I choose to opt-out of funding my account at the moment. (Please note that if your account is not funded within 30 days it will be closed.)">
