Prashant 3/20/17 - Preuat testing for Change Strategy fixes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7.xhtml
@@ -17,7 +17,6 @@
         <div class="ContainerIndent">
 
 
-
             <div class="Container100 Responsive100">
                 <div class="Container10" style="height:1px;"></div>
                 <div class="Container80 Responsive100">
@@ -25,7 +24,8 @@
                         <div class="ContainerIndent">
                             <p:panel style="height: 60%; width: 100%; background: #ffffff;">
                                 <div class="EmptyBox5"></div>
-                                <div class="Fs17 textAlign">Your currently selected strategy for this portfolio is <strong>#{tcmpb.origCustomerData.portfolioName}</strong>
+                                <div class="Fs17 textAlign">Your currently selected strategy for this portfolio is
+                                    <strong>#{tcmpb.origCustomerData.portfolioName}</strong>
                                 </div>
 
 
@@ -37,38 +37,40 @@
                         <p:panel id="reviewPanel" style="height: 60%; width: 100%; background: #ffffff;">
                             <div class="EmptyBox10"></div>
 
-                                <ui:fragment rendered="#{tcmpb.formula == 'Q'}">
-                                    <div class="Fs17 textAlign">
-                                        After reviewing your risk though the
-                                        questionnaire, your new portfolio recommendation is <strong>#{tcmpb.fixedModelName}</strong>
-                                    </div>
-                                </ui:fragment>
-                                <ui:fragment rendered="#{tcmpb.formula != 'Q'}">
-                                    <div class="Fs17 textAlign">
-                                        Rather than having a strategy recommended to me based on my time horizon and risk tolerance, I would rather directly choose my investment strategy and am familiar with the associated risks.The strategy I choose is:
-                                    </div>
-                                </ui:fragment>
+                            <ui:fragment rendered="#{tcmpb.formula == 'Q'}">
+                                <div class="Fs17 textAlign">
+                                    After reviewing your risk though the
+                                    questionnaire, your new portfolio recommendation is <strong>#{tcmpb.fixedModelName}</strong>
+                                </div>
+                            </ui:fragment>
+                            <ui:fragment rendered="#{tcmpb.formula != 'Q'}">
+                                <div class="Fs17 textAlign">
+                                    Rather than having a strategy recommended to me based on my time horizon and risk tolerance, I would rather directly choose my investment strategy and am familiar with the associated risks.The strategy I choose is:
+                                </div>
+                            </ui:fragment>
 
                             <div class="EmptyBox10"></div>
-                            <ui:fragment rendered="#{(tcmpb.origCustomerData.portfolioName==tcmpb.fixedModelName) and tcmpb.formula=='Q'}" >
+                            <ui:fragment rendered="#{(tcmpb.origCustomerData.portfolioName==tcmpb.fixedModelName) and tcmpb.formula=='Q'}">
                                 <div class="fs17 textAlign">
                                     Your current and revised portfolio is same, you can not do further processing.
                                 </div>
                                 <div class="EmptyBox10"></div>
-                                    </ui:fragment>
+                            </ui:fragment>
 
-                            <ui:fragment rendered="#{(tcmpb.origCustomerData.portfolioName!=tcmpb.fixedModelName) or tcmpb.formula=='D'}" >
-                            <div style="border:0px !important; background:none;" class="Container50 FormContent">
-				                <div class="container100"><p:messages styleClass="errorText"  showDetail="false" autoUpdate="true" closable="true" /> </div>
-                                <div class="container100 ReviewRadioBtnP" style="margin:auto;" id="abc">
-                                    <p:selectOneRadio value="#{tcmpb.selectedThemeName}" layout="pageDirection"
-                                                      required="true" requiredMessage="Please choose one of these choices">
-                                        <p:ajax listener="#{tcmpb.selectedTheme}"
-                                                update=":ceForm:inputArea,:ceForm:summary"/>
-                                        <f:selectItems style="font-size:14px;"  itemLabel="#{c.displayname}"  itemValue="#{c.displayname}" var="c"  value="#{tcmpb.fmDataArrayList}"/>
-                                    </p:selectOneRadio>
+                            <ui:fragment rendered="#{(tcmpb.origCustomerData.portfolioName!=tcmpb.fixedModelName) or tcmpb.formula=='D'}">
+                                <div style="border:0px !important; background:none;" class="Container50 FormContent">
+                                    <div class="container100"><p:messages styleClass="errorText" showDetail="false" autoUpdate="true"
+                                                                          closable="true"/></div>
+                                    <div class="container100 ReviewRadioBtnP" style="margin:auto;" id="abc">
+                                        <p:selectOneRadio value="#{tcmpb.selectedThemeName}" layout="pageDirection"
+                                                          required="true" requiredMessage="Please choose one of these choices">
+                                            <p:ajax listener="#{tcmpb.selectedTheme}"
+                                                    update=":ceForm:inputArea,:ceForm:summary"/>
+                                            <f:selectItems style="font-size:14px;" itemLabel="#{c.displayname}" itemValue="#{c.displayname}" var="c"
+                                                           value="#{tcmpb.fmDataArrayList}"/>
+                                        </p:selectOneRadio>
+                                    </div>
                                 </div>
-                            </div>
                                 <div class="Container40">
 
                                     <h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
@@ -77,10 +79,11 @@
                                     <div id="progressChart" class="Container100 Fright"></div>
                                 </div>
                                 <div class="EmptyBox10"></div>
-                            <div class="Container100 Responsive100 TextAlCenter">
+                                <div class="Container100 Responsive100 TextAlCenter">
 
 
-              <p:fieldset id="summary" legend="#{tcmpb.selectedThemeName}" toggleable="true" styleClass="summaryConfirm" toggleSpeed="500">
+                                    <p:fieldset id="summary" legend="#{tcmpb.selectedThemeName}" toggleable="true" styleClass="summaryConfirm"
+                                                toggleSpeed="500">
                                         <div class="Container100 Responsive100">
                                             <div class="EmptyBox10"></div>
 
@@ -139,7 +142,7 @@
                                     </p:fieldset>
 
 
-                            </div>
+                                </div>
                             </ui:fragment>
                             <div class="EmptyBox5"></div>
                         </p:panel>
@@ -150,7 +153,7 @@
                                          immediate="true"
                                          actionListener="#{tcmpb.startover}"/>
                         <p:commandButton styleClass="Fright" value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
-                                         update=":ceForm:inputArea" disabled="#{(tcmpb.origCustomerData.portfolioName==tcmpb.fixedModelName) and tcmpb.formula=='Q'}"
+                                         update=":ceForm:inputArea" disabled="#{tcmpb.sameStrategy}"
                                          actionListener="#{tcmpb.nextPage}"/>
 
                     </div>
