--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
@@ -9,7 +9,7 @@
         <div class="ContainerIndent">
 	    <div class="Fs17 textAlign">
 
-            You are about to change your portfolio's strategy from <strong>#{tcmpb.portfolioName}</strong> to <strong>#{tcmpb.selectedThemeName}</strong>.
+            You are about to change your portfolio's strategy from <strong>#{tcmpb.origCustomerData.portfolioName}</strong> to <strong>#{tcmpb.portfolioName}</strong>.
             Please read and accept the following statements to indicate that you know and understand the potential implications.
             <!--
             You are about to make an exchange from
