--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -17,48 +17,67 @@
 
                     <div class="EmptyBox5"></div>
                 </p:panel>
-                <h5 style="text-align: left;">
-                    7. To what extent are you concerned about preservation of your capital?
-                </h5>
+                <p:panel id="q7Panel" style="border: 0px; background-color: transparent">
+                    <h5 style="text-align: left;">
+                        7. To what extent are you concerned about preservation of your capital?  Choose one of the graph below.
+                    </h5>
 
-                <div class="riskGraphBarBlock">
-                    <div class="marginCenteronly1">
-                        <div class="brTopLabel">12%</div>
-                        <div class="bar1">
-                            <div class="innerval1" style="margin: 5px 0px 0px 18px;!important">3.5%<div><i class="fa fa-circle"></i></div></div>
-                            <i class="fa fa-check-circle barcheckedicon1"></i>
+                    <div class="riskGraphBarBlock">
+                        <p:commandLink id="uobp7selbtn1" actionListener="#{uobpb.riskCalculator.setAnswer(9,1)}"
+                                       process="@this" styleClass="PSlabLink"
+                                       update=":ceForm:workArea">
+                            <div class="marginCenteronly1">
+                                <div class="brTopLabel">12%</div>
+                                <div class="bar1 #{uobpb.riskCalculator.ans9 == '1' ? ' selectedRiskBar' : ''}">
+                                    <div class="innerval1" style="margin: 5px 0px 0px 18px;!important">3.5%
+                                        <div><i class="fa fa-circle"></i></div>
+                                    </div>
+                                    <i class="fa fa-check-circle barcheckedicon1"></i>
 
-                            <div class="innerBarUp1"></div>
-                            <div class="innerBarDown1"></div>
-                        </div>
-                        <div class="brBottomLabel">-5%</div>
+                                    <div class="innerBarUp1"></div>
+                                    <div class="innerBarDown1"></div>
+                                </div>
+                                <div class="brBottomLabel">-5%</div>
+                            </div>
+                        </p:commandLink>
+                        <p:commandLink id="uobp7selbtn2" actionListener="#{uobpb.riskCalculator.setAnswer(9,2)}"
+                                       process="@this" styleClass="PSlabLink"
+                                       update=":ceForm:workArea">
+                            <div class="marginCenteronly2">
+                                <div class="brTopLabel">24%</div>
+                                <div class="bar2 #{uobpb.riskCalculator.ans9 == '2' ? ' selectedRiskBar' : ''}">
+                                    <div class="innerval1">6%<div><i class="fa fa-circle"></i></div></div>
+                                    <i class="fa fa-check-circle barcheckedicon2"></i>
+
+                                    <div class="innerBarUp2"></div>
+                                    <div class="innerBarDown2"></div>
+                                </div>
+                                <div class="brBottomLabel">-12%</div>
+                            </div>
+                        </p:commandLink>
+                        <p:commandLink id="uobp7selbtn3" actionListener="#{uobpb.riskCalculator.setAnswer(9,3)}"
+                                       process="@this" styleClass="PSlabLink"
+                                       update=":ceForm:workArea">
+                            <div class="marginCenteronly3">
+                                <div class="brTopLabel">36%</div>
+                                <div class="bar3 #{uobpb.riskCalculator.ans9 == '3' ? ' selectedRiskBar' : ''}">
+                                    <div class="innerval1">8%
+                                        <div><i class="fa fa-circle"></i></div>
+                                    </div>
+                                    <i class="fa fa-check-circle barcheckedicon3"></i>
+
+                                    <div class="innerBarUp3"></div>
+                                    <div class="innerBarDown3"></div>
+                                </div>
+                                <div class="brBottomLabel">-20%</div>
+                            </div>
+                        </p:commandLink>
                     </div>
-                    <div class="marginCenteronly2">
-                        <div class="brTopLabel">24%</div>
-                        <div class="bar2 selectedRiskBar">
-                            <div class="innerval1">6%<div><i class="fa fa-circle"></i></div></div>
-                            <i class="fa fa-check-circle barcheckedicon2"></i>
+                    <!--<f:selectItem itemLabel="A high degree of risk would be acceptable given longer term capital growth objectives." itemValue="1" />
+                    <f:selectItem itemLabel="A moderate degree of risk would be acceptable given the potential for increased returns." itemValue="2" />
+                    <f:selectItem itemLabel="A minimal degree of risk would be acceptable for a slight increase in potential returns." itemValue="3" />-->
 
-                            <div class="innerBarUp2"></div>
-                            <div class="innerBarDown2"></div>
-                        </div>
-                        <div class="brBottomLabel">-12%</div>
-                    </div>
-                    <div class="marginCenteronly3">
-                        <div class="brTopLabel">36%</div>
-                        <div class="bar3">
-                            <div class="innerval1">8%<div><i class="fa fa-circle"></i></div></div>
-                            <i class="fa fa-check-circle barcheckedicon3"></i>
-
-                            <div class="innerBarUp3"></div>
-                            <div class="innerBarDown3"></div>
-                        </div>
-                        <div class="brBottomLabel">-20%</div>
-                    </div>
-                </div>
-                <!--<f:selectItem itemLabel="A high degree of risk would be acceptable given longer term capital growth objectives." itemValue="1" />
-                <f:selectItem itemLabel="A moderate degree of risk would be acceptable given the potential for increased returns." itemValue="2" />
-                <f:selectItem itemLabel="A minimal degree of risk would be acceptable for a slight increase in potential returns." itemValue="3" />-->
+                </p:panel>
 
             </div>
         </div>
